# sqlmermaid

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml  sqlmermaid.py  test_sqlmermaid.py
.github/workflows/: compatibility_test.yml  test.yml  twine_release.yml
coverage/: report.md
docs/: api.md  autosumm.rst  conf.py  release_notes.md
docs/api/: sqlmermaid.format_col_type.rst  sqlmermaid.get_mermaid.rst  sqlmermaid.open_in_browser.rst  sqlmermaid.to_file.rst  sqlmermaid.to_mermaid_node.rst
docs/notebooks/: doc-000-intro.rst  doc-001-quickstart.rst  doc-002-multi-fk.rst
docs/release_notes/: v0.0.0.rst  v0.1.0.rst  v0.1.1.rst  v0.1.2.rst  v0.1.3.rst  v0.1.4.rst
notebooks/: doc-000-intro.ipynb  doc-001-quickstart.ipynb  doc-002-multi-fk.ipynb
