[project]
name = "sqlmermaid"
dynamic = ["version", "description"]
authors = [{name = "Endre Márk Borza", email = "endremborza@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["sqlalchemy>=2.0.0"]

[project.optional-dependencies]
test = ["branthebuilder"]
doc = [
    "branthebuilder[doc]",
    "sphinxcontrib-mermaid"
]

[project.urls]
Homepage = "https://github.com/endremborza/sqlmermaid"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.branb]
line-length = 88
