[project]
name = "sqlmermaid"
description = "Visualizing SQL databases"
dynamic = ["version"]
authors = [{name = "Endre Márk Borza", email = "endremborza@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["sqlalchemy>=2.0.0"]

[project.urls]
Homepage = "https://github.com/endremborza/sqlmermaid"

[dependency-groups]
test = ["branthebuilder[test]"]
doc = [
    "branthebuilder[doc]",
    "sphinxcontrib-mermaid"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "sqlmermaid.py"

[tool.ruff.lint]
select = ["E", "F", "I"]
