[project]
name = "sqlmermaid"
description = "Visualizing SQL databases"
dynamic = ["version"]
authors = [{name = "Endre Márk Borza", email = "endremborza@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["sqlalchemy>=2.0.0"]

[project.scripts]
sqlmermaid = "sqlmermaid:main"

[project.urls]
Homepage = "https://github.com/endremborza/sqlmermaid"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "sqlmermaid.py"

[tool.pytest.ini_options]
addopts = "test_sqlmermaid.py"

[tool.ruff.lint]
select = ["E", "F", "I"]
